eureka/peer3-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: eureka-3
  name: peer3
spec:
  ports:
  - name: eureka
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    name: eureka-3
  sessionAffinity: None
  type: ClusterIP
