eureka/peer4-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: eureka-4
  name: peer4
spec:
  ports:
  - name: eureka
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    name: eureka-4
  sessionAffinity: None
  type: ClusterIP
